# CTestAdapter

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  ClearAllBuildDirs.bat  ClearExperimentalHive.bat  GitVc.cmake  README.md  Setup.bat  SetupVs2017.bat  Version.cmake
CTestAdapter/: AssemblyInfo.cs.in  CMakeCache.cs  CMakeCacheWatcher.cs  CMakeLists.txt  CTestAdapterCommandTable.vsct  CTestAdapterConfig.cs  CTestAdapterConstants.cs  CTestAdapterLog.cs  CTestAdapterLogFile.cs  CTestAdapterLogWindow.cs  CTestAdapterOptionPage.cs  CTestAdapterPackage.cs  CTestCommand.cs  CTestContainer.cs  CTestContainerDiscoverer.cs  CTestDiscoverer.cs  CTestExecutor.cs  CTestTestCollection.cs  CTestTestCollector.cs  FolderEventListener.cs  ILog.cs  ILogWriter.cs  JobObject.cs  LogWriterOptions.cs  SolutionEventListener.cs  TestContainerChangedEventArgs.cs  TestContainerHelper.cs  TestContainerManager.cs  TestContainerWatcher.cs  source.in.extension.vsixmanifest
CTestAdapterSample/: CMakeLists.txt
CTestAdapterSample/src/: CMakeLists.txt  main_long.cpp
